--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,5 @@
-/.idea/*
+.env
+*.key
 
 # Git
 .git
@@ -7,11 +8,11 @@
 Dockerfile
 docker-compose.yml
 
-ecosystem.config.js
-
-# NPM dependencies
+# Dependencies
 node_modules
-npm-debug.log
 
-.env
-*.key
+# Miscellaneous
+npm-debug.log
+yarn-error.log
+ecosystem.config.js
+/.idea/*
