--- a/package.json
+++ b/package.json
@@ -19,17 +19,16 @@
   "dependencies": {
     "axios": "^0.21.4",
     "debug": "^4.3.2",
-    "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.12.1",
+    "form-data": "^4.0.0",
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
     "inversify": "^5.1.1",
     "inversify-express-utils": "^6.3.2",
-    "morgan": "^1.10.0",
-    "node-trello": "^1.3.0"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/debug": "^4.1.7",
@@ -39,6 +38,7 @@
     "@types/node": "^16.9.1",
     "@types/validator": "^13.6.3",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "discord-api-types": "^0.23.1",
     "eslint": "^7.32.0",
     "eslint-config-standard-with-typescript": "^21.0.1",
     "eslint-plugin-import": "^2.24.0",
