--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,3 +3,9 @@ version: '3'
 services:
   app:
     build: .
+    env_file: .env
+    ports:
+      - 3000:3000
+    volumes:
+      - /opt/app/node_modules
+      - ./dist:/opt/app/dist
