--- a/package.json
+++ b/package.json
@@ -3,29 +3,51 @@
   "version": "0.0.0",
   "description": "Server that listens to actions on a Trello webhook and sends these as embed to a Discord webhook.",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/guidojw/trello-discord-webhook.git"
+  },
+  "license": "MIT",
+  "author": "Guido de Jong",
   "main": "app.js",
   "scripts": {
+    "build": "tsc",
+    "lint": "eslint src",
     "start": "node ./bin/www",
-    "start:dev": "nodemon ./bin/www",
-    "lint": "eslint app"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Guido de Jong",
-  "license": "MIT",
   "dependencies": {
-    "axios": "^0.21.0",
-    "dotenv": "^8.2.0",
+    "axios": "^0.21.4",
+    "debug": "^4.3.2",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "express-validator": "^6.6.1",
-    "helmet": "^4.2.0",
+    "express-validator": "^6.12.1",
+    "form-data": "^4.0.0",
+    "helmet": "^4.6.0",
     "hpp": "^0.2.3",
-    "morgan": "^1.10.0",
-    "node-dependency-injection": "^2.6.8",
-    "node-trello": "^1.3.0"
+    "inversify": "^5.1.1",
+    "inversify-express-utils": "^6.3.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "eslint": "^7.13.0",
-    "nodemon": "^2.0.6",
-    "standard": "^16.0.2"
+    "@types/debug": "^4.1.7",
+    "@types/express": "^4.17.13",
+    "@types/hpp": "^0.2.2",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^16.9.1",
+    "@types/validator": "^13.6.3",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "discord-api-types": "^0.23.1",
+    "eslint": "^7.32.0",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-plugin-import": "^2.24.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "reflect-metadata": "^0.1.13",
+    "typescript": "^4.4.3"
+  },
+  "engines": {
+    "node": ">=14"
   }
 }
