--- a/package.json
+++ b/package.json
@@ -17,35 +17,35 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "axios": "^0.21.4",
-    "debug": "^4.3.2",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
+    "axios": "^1.4.0",
+    "cors": "^2.8.5",
+    "debug": "^4.3.4",
+    "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "express-validator": "^6.12.1",
+    "express-validator": "^7.0.1",
     "form-data": "^4.0.0",
-    "helmet": "^4.6.0",
+    "helmet": "^6.1.5",
     "hpp": "^0.2.3",
-    "inversify": "^5.1.1",
-    "inversify-express-utils": "^6.3.2",
+    "inversify": "^6.0.1",
+    "inversify-express-utils": "^6.4.3",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/debug": "^4.1.7",
-    "@types/express": "^4.17.13",
+    "@types/express": "^4.17.17",
     "@types/hpp": "^0.2.2",
-    "@types/morgan": "^1.9.3",
-    "@types/node": "^16.9.1",
-    "@types/validator": "^13.6.3",
-    "@typescript-eslint/eslint-plugin": "^4.31.0",
-    "discord-api-types": "^0.23.1",
-    "eslint": "^7.32.0",
-    "eslint-config-standard-with-typescript": "^21.0.1",
-    "eslint-plugin-import": "^2.24.0",
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^20.0.0",
+    "@types/validator": "^13.7.15",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "discord-api-types": "^0.37.41",
+    "eslint": "^8.39.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-promise": "^6.1.1",
     "reflect-metadata": "^0.1.13",
-    "typescript": "^4.4.3"
+    "typescript": "^5.0.4"
   },
   "engines": {
     "node": ">=14"
